# seq

./: .gitignore  Cargo.toml  LICENSE  README.md  TESTING_GUIDE.md  USER_GUIDE.md  features.md  plan.md
benches/: performance.rs
src/: main.rs
src/arrangement/: mod.rs  part.rs  scene.rs  song.rs
src/audio/: fluidsynth.rs  mod.rs  output.rs
src/config/: mod.rs  watcher.rs
src/control/: keyboard.rs  midi_map.rs  mod.rs  params.rs
src/generators/: arpeggio.rs  chord.rs  drone.rs  drums.rs  melody.rs  mod.rs
src/midi/: coremidi_backend.rs  input.rs  mod.rs
src/music/: mod.rs  scale.rs
src/recording/: capture.rs  export.rs  freeze.rs  mod.rs
src/sequencer/: clip.rs  mod.rs  scheduler.rs  track.rs  trigger.rs
src/timing/: clock.rs  mod.rs
src/ui/: midi_activity.rs  mod.rs  tracks.rs  transport.rs
tests/: integration_tests.rs
